# pico-solar

./: .gitignore  CMakeLists.txt  README.md  adc_readings.md  dht.c  dht.h  i2c_lcd.c  i2c_lcd.h  main.c  ohms_law.c  ohms_law.h  pins.h
